# codewars-haskell

./: .gitignore  README.md  kata-averages.cabal
src/: Average.hs  CroquetClubCategorizeMember.hs  Mumbling.hs
test/: AverageSpec.hs  CroquetClubCategorizeMemberSpec.hs  MumblingSpec.hs
