name:                kata-averages
version:             0.1.0.0
homepage:            https://github.com/OscarGalindo/kata-averages#readme
license:             BSD3
license-file:        LICENSE
author:              Oscar GV
maintainer:          galindero@gmail.com
copyright:           2018 Oscar GV
category:            Kata
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Average, Mumbling, CroquetClubCategorizeMember, Spinning
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite kata-averages-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kata-averages
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OscarGalindo/kata-averages
